--- a/www.dz-rs.si/1adf5a099b487184e68812f0266f08ff43357a76.yml
+++ b/www.dz-rs.si/1adf5a099b487184e68812f0266f08ff43357a76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:19:02 GMT
+    - Wed, 02 May 2018 22:00:30 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000rVBoOUz33DmCOnwwv8TTpsK:-1; Path=/; HttpOnly
+    - JSESSIONID=0000FKWR9gVh9o8KF_2xfr9YC3e:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25297547;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->60;C003;
+    - F7360B2047A90E4D;87d9ab10;155179;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->13;EvalII->13;CHd;FP2->13;WS=fd938310;default;FP4->145;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25297547)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155179)
     Content-Length:
     - '13228'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:19:01 GMT
+recorded_at: Wed, 02 May 2018 22:00:28 GMT
