--- a/www.dz-rs.si/9e2bf66be2bffc086db59af577e5420d76ebb03f.yml
+++ b/www.dz-rs.si/9e2bf66be2bffc086db59af577e5420d76ebb03f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:19:13 GMT
+    - Wed, 02 May 2018 22:00:44 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000bQqF7lCj3xX3ILw26261f_a:-1; Path=/; HttpOnly
+    - JSESSIONID=00001sb8QZVTybe00xt_V40kLEL:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25297615;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->53;C003;
+    - F7360B2047A90E4D;87d9ab10;155211;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->59;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25297615)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155211)
     Content-Length:
-    - '12817'
+    - '12815'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:19:12 GMT
+recorded_at: Wed, 02 May 2018 22:00:42 GMT
