--- a/www.dz-rs.si/8e6c1eae437a302813242ca38e7500ae79e02267.yml
+++ b/www.dz-rs.si/8e6c1eae437a302813242ca38e7500ae79e02267.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:19:29 GMT
+    - Wed, 02 May 2018 22:01:11 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000KfEFj4JL65Z1kPu9NriASza:-1; Path=/; HttpOnly
+    - JSESSIONID=0000JRYbb3H3sl5ajFsLINWThSA:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25297719;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->47;C003;
+    - F7360B2047A90E4D;87d9ab10;155275;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->15;EvalII->15;CHd;FP2->15;WS=fd938310;default;FP4->63;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25297719)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155275)
     Content-Length:
     - '12784'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:19:27 GMT
+recorded_at: Wed, 02 May 2018 22:01:09 GMT
