--- a/www.dz-rs.si/6e87ac6037813f2910454af873957a9239843c47.yml
+++ b/www.dz-rs.si/6e87ac6037813f2910454af873957a9239843c47.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:19:38 GMT
+    - Wed, 02 May 2018 22:01:27 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000HOZA6ARuxB8CFFtnd7wBHjD:-1; Path=/; HttpOnly
+    - JSESSIONID=0000mipXcFL_3x2XcoZlNwv2hzM:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25297761;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->47;C003;
+    - F7360B2047A90E4D;87d9ab10;155314;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->73;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25297761)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155314)
     Content-Length:
     - '13034'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:19:37 GMT
+recorded_at: Wed, 02 May 2018 22:01:24 GMT
