--- a/www.dz-rs.si/11824e20c486e651f19438f2e99bc13d5e0d3d11.yml
+++ b/www.dz-rs.si/11824e20c486e651f19438f2e99bc13d5e0d3d11.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:20:40 GMT
+    - Wed, 02 May 2018 22:02:22 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000f0_EKSXYdP1Wk7lrW3k0MgH:-1; Path=/; HttpOnly
+    - JSESSIONID=0000DioaccXGDFIfIhriABRkXsd:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25298052;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->85;C003;
+    - F7360B2047A90E4D;87d9ab10;155455;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->14;EvalII->14;CHd;FP2->14;WS=fd938310;default;FP4->59;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25298052)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155455)
     Content-Length:
     - '13160'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:20:39 GMT
+recorded_at: Wed, 02 May 2018 22:02:20 GMT
