--- a/www.dz-rs.si/13d2885dd2e350a2d7051b9d575cd39182e3d979.yml
+++ b/www.dz-rs.si/13d2885dd2e350a2d7051b9d575cd39182e3d979.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:20:50 GMT
+    - Wed, 02 May 2018 22:02:36 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=000019xU0v-oV1i2C_0Hgu1A2vR:-1; Path=/; HttpOnly
+    - JSESSIONID=0000nybsKYt-oFUH4L-8mjAg2D1:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25298133;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->66;C003;
+    - F7360B2047A90E4D;87d9ab10;155497;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->50;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25298133)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155497)
     Content-Length:
     - '13011'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:20:48 GMT
+recorded_at: Wed, 02 May 2018 22:02:33 GMT
