--- a/www.dz-rs.si/22a14305a5cbb367a3ec7d9ae71aed2cb7dae536.yml
+++ b/www.dz-rs.si/22a14305a5cbb367a3ec7d9ae71aed2cb7dae536.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:21:04 GMT
+    - Wed, 02 May 2018 22:02:45 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00004pQSFvP9is3qeKjJWhyuX54:-1; Path=/; HttpOnly
+    - JSESSIONID=0000kgBgipY4Z5H4sIjHrU__iHM:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25298211;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->204;C003;
+    - F7360B2047A90E4D;87d9ab10;155523;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->89;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25298211)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155523)
     Content-Length:
-    - '12978'
+    - '12977'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:21:02 GMT
+recorded_at: Wed, 02 May 2018 22:02:43 GMT
