--- a/www.dz-rs.si/1984e5762c9dd0a002ee9780c61098cc8cb82f81.yml
+++ b/www.dz-rs.si/1984e5762c9dd0a002ee9780c61098cc8cb82f81.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:22:14 GMT
+    - Wed, 02 May 2018 22:03:49 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00000nKVDN5J1JzCt-nuXst1Gw-:-1; Path=/; HttpOnly
+    - JSESSIONID=0000j0i_TirOR0fVnWyvy-NSQ_J:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25298532;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->161;C003;
+    - F7360B2047A90E4D;87d9ab10;155656;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->56;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25298532)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155656)
     Content-Length:
-    - '12477'
+    - '12475'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:22:12 GMT
+recorded_at: Wed, 02 May 2018 22:03:47 GMT
