--- a/www.dz-rs.si/045e5c0817cf95cf54e092c1d0644294cd33c713.yml
+++ b/www.dz-rs.si/045e5c0817cf95cf54e092c1d0644294cd33c713.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:23:05 GMT
+    - Wed, 02 May 2018 22:04:39 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000zWz4egHL0oQhb27f4QTjAGI:-1; Path=/; HttpOnly
+    - JSESSIONID=0000mk2uwkKT06npL0J-eOiOKOo:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25298787;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->52;C003;
+    - F7360B2047A90E4D;87d9ab10;155753;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->159;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25298787)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155753)
     Content-Length:
-    - '12839'
+    - '12837'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:23:03 GMT
+recorded_at: Wed, 02 May 2018 22:04:36 GMT
