--- a/www.dz-rs.si/db86921581ca2a16331cb2a6c30f866488e1e51a.yml
+++ b/www.dz-rs.si/db86921581ca2a16331cb2a6c30f866488e1e51a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:23:15 GMT
+    - Wed, 02 May 2018 22:04:53 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000vfykBO6Gi99lhQBLKbZVI2k:-1; Path=/; HttpOnly
+    - JSESSIONID=0000CP3ua6zR22Wb6Y7amTP6iXM:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25298893;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->64;C003;
+    - F7360B2047A90E4D;87d9ab10;155770;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->55;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25298893)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155770)
     Content-Length:
     - '13403'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:23:13 GMT
+recorded_at: Wed, 02 May 2018 22:04:51 GMT
