--- a/www.dz-rs.si/c34a2790b545ec6fe8d08ed37513d8c055774e78.yml
+++ b/www.dz-rs.si/c34a2790b545ec6fe8d08ed37513d8c055774e78.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:23:27 GMT
+    - Wed, 02 May 2018 22:05:07 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00004TruO49l2-9VH9PQgEOVa3n:-1; Path=/; HttpOnly
+    - JSESSIONID=0000UZwqQXLy9kj4FYyCDTIuGD9:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25298973;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->53;C003;
+    - F7360B2047A90E4D;87d9ab10;155794;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->53;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25298973)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155794)
     Content-Length:
-    - '13293'
+    - '13291'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:23:25 GMT
+recorded_at: Wed, 02 May 2018 22:05:05 GMT
