--- a/www.dz-rs.si/da7f65fc1f643427981b00fb9a061f2b9b1b9f36.yml
+++ b/www.dz-rs.si/da7f65fc1f643427981b00fb9a061f2b9b1b9f36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:23:42 GMT
+    - Wed, 02 May 2018 22:05:21 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000Zg2maCiO7cKfSe7jQGn6AxG:-1; Path=/; HttpOnly
+    - JSESSIONID=0000F2z5xwj8zCN5Ew-o8W-E8Lp:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25299014;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->54;C003;
+    - F7360B2047A90E4D;87d9ab10;155827;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->11;EvalII->11;CHd;FP2->11;WS=fd938310;default;FP4->55;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25299014)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155827)
     Content-Length:
-    - '14290'
+    - '14288'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:23:40 GMT
+recorded_at: Wed, 02 May 2018 22:05:18 GMT
