--- a/www.dz-rs.si/0d423a7a740776201107f27db724a9f5d5e6bedb.yml
+++ b/www.dz-rs.si/0d423a7a740776201107f27db724a9f5d5e6bedb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:23:56 GMT
+    - Wed, 02 May 2018 22:05:32 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000t_gNQfshWJ--EgDkKtcsihD:-1; Path=/; HttpOnly
+    - JSESSIONID=0000dgc-uJgd2CZSdJSm-z2qIi1:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25299041;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->60;C003;
+    - F7360B2047A90E4D;87d9ab10;155850;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->59;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25299041)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155850)
     Content-Length:
     - '13517'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:23:54 GMT
+recorded_at: Wed, 02 May 2018 22:05:29 GMT
