--- a/www.dz-rs.si/b4b50c817588c4c43810a31d3c3079d5e733afdb.yml
+++ b/www.dz-rs.si/b4b50c817588c4c43810a31d3c3079d5e733afdb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:24:25 GMT
+    - Wed, 02 May 2018 22:05:53 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00006Y-7bL7zBpeoj9IW1t5u_zU:-1; Path=/; HttpOnly
+    - JSESSIONID=0000xYg5BijWBTJqrQbdwRCglJB:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25299121;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->64;C003;
+    - F7360B2047A90E4D;87d9ab10;155893;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->12;EvalII->12;CHd;FP2->12;WS=fd938310;default;FP4->121;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25299121)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155893)
     Content-Length:
-    - '12815'
+    - '12818'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:24:23 GMT
+recorded_at: Wed, 02 May 2018 22:05:51 GMT
