--- a/www.dz-rs.si/04a0bd7b2eca5d4bc67d3c71a959b06c2197a5bf.yml
+++ b/www.dz-rs.si/04a0bd7b2eca5d4bc67d3c71a959b06c2197a5bf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 21:57:19 GMT
+    - Fri, 04 May 2018 15:29:16 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -42,15 +42,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00006X392Br8_w_C-WuURIYTqcQ:-1; Path=/; HttpOnly
+    - JSESSIONID=00005YyUoE8qB1txWAfvpveJV3-:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;154767;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->93;C007;
+    - F7360B2047A90E4D;87d9ab10;1263056;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->60;C007;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-154767)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1263056)
     Content-Length:
     - '13506'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 21:57:16 GMT
+recorded_at: Fri, 04 May 2018 15:29:13 GMT
