--- a/www.dz-rs.si/397cb950b39df0d7ceb5819da00dd0ce2a44c299.yml
+++ b/www.dz-rs.si/397cb950b39df0d7ceb5819da00dd0ce2a44c299.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 21:57:32 GMT
+    - Fri, 04 May 2018 15:29:30 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000fCHqISWHE2IYskIprSvAWnd:-1; Path=/; HttpOnly
+    - JSESSIONID=0000C88ZJA5DqOVHTspfAZ-fSkj:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;154814;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->50;C003;
+    - F7360B2047A90E4D;87d9ab10;1263078;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->53;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-154814)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1263078)
     Content-Length:
-    - '13241'
+    - '13242'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 21:57:29 GMT
+recorded_at: Fri, 04 May 2018 15:29:27 GMT
