--- a/www.dz-rs.si/191c6a21bdd36e6fea889aec5e2b33fbd94ad7af.yml
+++ b/www.dz-rs.si/191c6a21bdd36e6fea889aec5e2b33fbd94ad7af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 21:57:45 GMT
+    - Fri, 04 May 2018 15:29:44 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000mgAmjQPZYfsULo3YE8TSdTF:-1; Path=/; HttpOnly
+    - JSESSIONID=0000Dz0PruPolgG4yA3QmaVbHYo:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;154832;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->64;C003;
+    - F7360B2047A90E4D;87d9ab10;1263158;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->54;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-154832)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1263158)
     Content-Length:
-    - '13042'
+    - '13041'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 21:57:43 GMT
+recorded_at: Fri, 04 May 2018 15:29:41 GMT
