--- a/www.dz-rs.si/590cc64c36c7c4448357a51df979d343e3b7dc4b.yml
+++ b/www.dz-rs.si/590cc64c36c7c4448357a51df979d343e3b7dc4b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 21:57:58 GMT
+    - Fri, 04 May 2018 15:29:57 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000p6L1jFWpyC0UYGiUGqzFVUj:-1; Path=/; HttpOnly
+    - JSESSIONID=0000peufF9O1auBpSRbsPZrJ7Fp:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;154853;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->51;C003;
+    - F7360B2047A90E4D;87d9ab10;1263220;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->14;EvalII->14;CHd;FP2->14;WS=fd938310;default;FP4->83;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-154853)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1263220)
     Content-Length:
     - '12399'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 21:57:56 GMT
+recorded_at: Fri, 04 May 2018 15:29:55 GMT
