--- a/www.dz-rs.si/d621ed91b143a61a70d377d0541bdbe25caa836a.yml
+++ b/www.dz-rs.si/d621ed91b143a61a70d377d0541bdbe25caa836a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 21:59:29 GMT
+    - Fri, 04 May 2018 15:31:17 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000OhBLKT3BEwT-4R3VYIU6Va_:-1; Path=/; HttpOnly
+    - JSESSIONID=0000nIHBulVXdpIvYhnGNc19k3T:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155002;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->15;EvalII->15;CHd;FP2->15;WS=fd938310;default;FP4->60;C003;
+    - F7360B2047A90E4D;87d9ab10;1263503;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->83;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155002)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1263503)
     Content-Length:
     - '12832'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 21:59:27 GMT
+recorded_at: Fri, 04 May 2018 15:31:14 GMT
