--- a/www.dz-rs.si/2d5491b77e2e7defab90545aaf8fb9f1f8800a59.yml
+++ b/www.dz-rs.si/2d5491b77e2e7defab90545aaf8fb9f1f8800a59.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 21:59:42 GMT
+    - Fri, 04 May 2018 15:31:30 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000-_EonS6m8cKunfAC9D5dy-b:-1; Path=/; HttpOnly
+    - JSESSIONID=0000PUksTB90zAR9pprgsdVO_uB:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155017;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->60;C003;
+    - F7360B2047A90E4D;87d9ab10;1263541;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->53;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155017)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1263541)
     Content-Length:
     - '12867'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 21:59:40 GMT
+recorded_at: Fri, 04 May 2018 15:31:27 GMT
